--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.8.1",
     "mysql2": "^1.4.1",
     "sequelize": "^4.5.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "sqlstring": "^2.2.0"
   }
 }
