--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mkdirp": "^0.5.1",
     "morgan": "~1.8.1",
     "mysql2": "^1.4.1",
+    "rimraf": "^2.6.1",
     "sequelize": "^4.5.0",
     "serve-favicon": "~2.4.2",
     "sqlstring": "^2.2.0"
