--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.15.2",
     "express-fileupload": "^0.1.4",
     "express-session": "^1.15.5",
+    "lodash": "^4.17.4",
     "mkdirp-promise": "^5.0.1",
     "morgan": "~1.8.1",
     "mysql2": "^1.4.2",
