--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "express": "~4.15.2",
     "express-fileupload": "^0.1.4",
     "express-session": "^1.15.5",
+    "jsonwebtoken": "^8.0.0",
     "lodash": "^4.17.4",
     "mkdirp-promise": "^5.0.1",
     "morgan": "~1.8.1",
     "mysql2": "^1.4.2",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "rimraf-promise": "^2.0.0",
     "sequelize": "^4.8.0",
     "serve-favicon": "~2.4.2"
